# eureka_simulation

./: CMakeLists.txt  package.xml
config/: eureka.rviz  my_controllers.yaml
description/: eureka.urdf.xacro
description/bases/: body.urdf.xacro  bogie.urdf.xacro  differential.urdf.xacro  rocker.urdf.xacro  turnbuckle.urdf.xacro
description/sensors/: all_sensors.urdf.xacro  asus_xtion.urdf.xacro  gps.urdf.xacro  hokuyo.urdf.xacro
description/wheels/: corner.urdf.xacro  wheel.urdf.xacro
launch/: general.launch.py  robot_state.launch.py
meshes/: Solid1__100__1.stl  Solid1__101__1.stl  Solid1__102__1.stl  Solid1__103__1.stl  Solid1__104__1.stl  Solid1__105__1.stl  Solid1__106__1.stl  Solid1__107__1.stl  Solid1__108__1.stl  Solid1__109__1.stl  Solid1__10__1.stl  Solid1__110__1.stl  Solid1__111__1.stl  Solid1__112__1.stl  Solid1__113__1.stl  Solid1__114__1.stl  Solid1__115__1.stl  Solid1__116__1.stl  Solid1__117__1.stl  Solid1__118__1.stl  Solid1__119__1.stl  Solid1__11__1.stl  Solid1__120__1.stl  Solid1__121__1.stl  Solid1__122__1.stl  Solid1__123__1.stl  Solid1__124__1.stl  Solid1__125__1.stl  Solid1__126__1.stl  Solid1__127__1.stl  Solid1__128__1.stl  Solid1__129__1.stl  Solid1__12__1.stl  Solid1__130__1.stl  Solid1__131__1.stl  Solid1__132__1.stl  Solid1__133__1.stl  Solid1__134__1.stl  Solid1__135__1.stl  Solid1__136__1.stl  (+164 more)
rviz/: eureka.rviz
urdf/: control.urdf.xacro  eureka.urdf.xacro  gazebo_material.urdf.xacro  materials.urdf.xacro  sensor.urdf.xacro
worlds/: forest.world  kinect.world  test.world
