<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eureka_simulation</name>
  <version>1.0.0</version>
  <description>Simulation in gazebo classic for eureka robot</description>
  <maintainer email="sewa.egorov@ya.ru">Josh Newans</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <depend>controller_manager</depend>
  <depend>control_toolbox</depend>
  <depend>rclcpp</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
